@@ -1,6 +1,6 @@
 --- #YAML:1.0
 name:                bw-db
-version:             1.1.0
+version:             1.1.1
 abstract:            ~
 license:             ~
 author:              
